2015-12-11  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/fast.ldf (loader_cfg): Add output section.
	* bsps/parallella64/internal.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/fast.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/internal.ldf: Likewise.

2015-12-10  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/fast.ldf (workgroup_cfg): Rename section from
	workgroup_config. Force allocation even if empty.
	(ext_mem_cfg): Rename from external_mem_config. Force allocation even
	if empty.
	* bsps/parallella64/internal.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/fast.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/internal.ldf: Likewise.

2015-12-08  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (e_finalize): If target is esim, disconnect
	with stop parameter set to true.
	* e-hal/src/esim-target.h (esim_ops): Add stop parameter to
	client_disconnect to match esim.h

2015-12-07  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (is_epiphany_exec_elf): New function.
	(is_srec_file): New function.
	(e_load_group): Rewrite to use mmaped file.
	(ee_process_elf): Likewise.
	(is_local): New function.
	(is_valid_addr): New function.
	(is_valid_range): New function.
	* e-hal/src/epiphany-hal.c (e_is_addr_in_emem): New function.
	* e-hal/src/epiphany-hal-api.h (e_is_addr_in_emem): Add function
	prototype.

2015-12-06  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/Makemodule.am (libe_loader_la_SOURCES): Remove
	e-process-SREC.c
	* e-hal/src/e-loader.c (int e_load_group): Deprecate SREC support.
	(ee_process_ELF): Move function here from e-process-SREC.c
	* e-hal/src/e-process-SREC.c: Remove.

2015-12-06  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac (AC_ARG_ENABLE(esim)): Adjust help text.
	* e-hal/Makemodule.am (noinst_HEADERS): Add esim-target.h.
	(libe_loader_la_SOURCES): Add esim-target.c
	(libe_hal_la_SOURCES): Likewise.
	(libe_loader_la_CFLAGS) [enable_esim]: Add needed flags.
	(libe_hal_la_CFLAGS) [enable_esim]: Likewise.