@@ -1,5 +1,15 @@
 2015-12-11  Ola Jeppsson  <ola@adapteva.com>
 
+	* e-hal/src/e-loader.c (loader_sections): Add struct.
+	(section_info): Add struct.
+	(loader_cfg): Add struct.
+	(e_load_group): Call lookup_section().
+	(lookup_sections): Implemented.
+	(ee_set_core_config): Add table parameter. Take section offset from
+	table instead of using hard coded values.
+
+2015-12-11  Ola Jeppsson  <ola@adapteva.com>
+
 	* bsps/parallella64/fast.ldf (loader_cfg): Add output section.
 	* bsps/parallella64/internal.ldf: Likewise.
 	* bsps/parallella_E16G3_1GB/fast.ldf: Likewise.
